# Spotify-Analytics

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt  setup.py
config/: config.example.yaml  config.yaml
src/analysis/: listening_patterns.py
src/data_processing/: data_enrichment.py  streaming_parser.py
src/visualization/: interactive_dashboard.py
